--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,10 +6,10 @@
             </div>
             <div class="col-6">
                 <div class="row-12 gx-0 m-0 text-end">
-                    <span class="px-2">Imprint</span>
-                    <span class="px-2">Legal Information</span>
-                    <span class="px-2">Data Privacy</span>
-                    <span class="px-2">Disclosure Documents</span>
+                    <span class="px-2 text-nowrap">Imprint</span>
+                    <span class="px-2 text-nowrap">Legal Information</span>
+                    <span class="px-2 text-nowrap">Data Privacy</span>
+                    <span class="px-2 text-nowrap">Disclosure Documents</span>
                 </div>
             </div>
         </div>
