--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -8,60 +8,57 @@
             project is equipped to handle specific requirements and maximize performance.
         </p>
     </div>
-    <div class="flex-grow-1 scroll overflow-hidden">
+    <div class="flex-grow-1 overflow-hidden">
         <div class="row gx-0 m-0 h-100 w-100">
             <div class="col-md-3 pe-3">
                 <div class="side-menu">
                     <ul>
-                        <li class="sideBarMenu p-3 " [ngClass]="activeTab == 'custom-source'?'activeClass':''"
-                            [class.active]="activeTab === 'custom-source'" (click)="setActiveTab('custom-source')">
+                        <li class="sideBarMenu p-3 " [ngClass]="activeTab == 'Custom Source'?'activeClass':''"
+                            [class.active]="activeTab === 'Custom Source'" (click)="setActiveTab('Custom Source','source')">
                             Create your Custom Source
                         </li>
-                        <li class="sideBarMenu p-3" [ngClass]="activeTab == 'custom-algorithm'?'activeClass':''"
-                            [class.active]="activeTab === 'custom-algorithm'" (click)="setActiveTab('custom-algorithm')">
+                        <li class="sideBarMenu p-3" [ngClass]="activeTab == 'Custom Algorithm'?'activeClass':''"
+                            [class.active]="activeTab === 'Custom Algorithm'"
+                            (click)="setActiveTab('Custom Algorithm','algo')">
                             Create your Custom Algorithm
-    
+
                         </li>
-                        <li class="sideBarMenu p-3" [ngClass]="activeTab == 'custom-sink'?'activeClass':''"
-                            [class.active]="activeTab === 'custom-sink'" (click)="setActiveTab('custom-sink')">
+                        <li class="sideBarMenu p-3" [ngClass]="activeTab == 'Custom Sink'?'activeClass':''"
+                            [class.active]="activeTab === 'Custom Sink'" (click)="setActiveTab('Custom Sink','sink')">
                             Create your Custom Sink
-    
+
                         </li>
-                        <li class="sideBarMenu p-3" [ngClass]="activeTab == 'custom-accumulator'?'activeClass':''"
-                            [class.active]="activeTab === 'custom-accumulator'"
-                            (click)="setActiveTab('custom-accumulator')">
+                        <li class="sideBarMenu p-3" [ngClass]="activeTab == 'Custom Accumulator'?'activeClass':''"
+                            [class.active]="activeTab === 'Custom Accumulator'"
+                            (click)="setActiveTab('Custom Accumulator','acc')">
                             Create your Custom Accumulator
                         </li>
                     </ul>
-    
+
                 </div>
             </div>
             <div class="col-md-9 h-100">
                 <!-- <app-child-module-extension [content]="contentData"></app-child-module-extension> -->
-                <div class="right-content scroll h-100 overflow-hidden d-flex flex-column">
-                    <div class="top-right-search">
-                        <div class="page-heading">
+                <div class="right-content h-100 overflow-hidden d-flex flex-column">
+                    <div class="row gx-0 m-0 align-items-center bg-light-gray">
+                        <div class=" col ps-3 ">
                             Available custom source
                         </div>
-                        <div class="search-bar">
-                            <input type="text" class="search-input">
-                            <button class="btn-search">
-                                <i class="boschicon-bosch-ic-search"></i>
-    
-                            </button>
+                        
+                        <div class="col d-flex justify-content-end align-items-center">
+                            <i class="boschicon-bosch-ic-search pe-3 fz-24px"></i>
+                            <app-button [class]="'primary justify-content-center'" [icon]="'bosch-ic-add'"
+                                (klick)="funcOpenCreateCustomModal()"> Create Custom Source
+                            </app-button>
                         </div>
-                        <button class="btn-main" (click)="funcOpenCreateCustomModal()">
-                            <i class="boschicon-bosch-ic-add"></i>
-                            Create Custom Source
-                        </button>
                     </div>
-                    <div class="custom-source-box pt-3 flex-grow-1 scroll">
+                    <div class="custom-box pt-3 flex-grow-1 scroll">
                         <div class="row gx-0 m-0">
-                            <div class="col-md-4 pb-3 pe-3" *ngFor="let item of customSourceData">
+                            <div class="col-md-4 pb-3 pe-3" *ngFor="let item of contentData">
                                 <div class="source-card border-1px-solid-black p-3">
                                     <div class="s-card-header mb-3 d-flex justify-content-between">
                                         <div class="s-card-title">
-                                            <h6 class="m-0 fz-16px fw-bold text-nowrap">{{ item.title }}</h6>
+                                            <h6 class="m-0 fz-16px fw-bold text-nowrap">{{ item.asset_name }}</h6>
                                         </div>
                                         <div class="s-card-action">
                                             <ul>
@@ -71,7 +68,7 @@
                                                 </li>
                                                 <li>
                                                     <i class="boschicon-bosch-ic-delete"></i>
-    
+
                                                     <!-- <img width="16" src="../../../assets/delete-icon.svg"> -->
                                                 </li>
                                             </ul>
@@ -81,7 +78,8 @@
                                         <p class="descriptionText">{{ item.description }}</p>
                                         <div class="s-card-labels">
                                             <ul class="overflow-hidden">
-                                                <li class="text-nowrap" *ngFor="let label of item.labels">{{ label }}</li>
+                                                <li class="text-nowrap" *ngFor="let label of item.labels">{{ label }}
+                                                </li>
                                             </ul>
                                         </div>
                                     </div>
