--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-loading></app-loading>
   <app-message-box></app-message-box>
   <app-toast-box></app-toast-box>
-  <ng-container *ngIf="router.url !== '/login' && router.url !== '/' && router.url !== '/createproject'">
+  <ng-container *ngIf="router.url !== '/login' && router.url !== '/'">
     <div class="header" style="height: 100px;">
       <app-header></app-header>
     </div>
@@ -16,7 +16,7 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="router.url == '/login' || router.url == '/' || router.url == '/createproject'">
+  <ng-container *ngIf="router.url == '/login' || router.url == '/'">
     <div class="h-100 w-100">
       <router-outlet></router-outlet>
     </div>
