--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,5 +45,5 @@
             </div>
         </div>
     </div>
-    <app-menu></app-menu>
+    <app-menu *ngIf="router.url != '/createproject'"></app-menu>
 </header>
