--- a/src/app/pages/createproject/createproject.component.scss
+++ b/src/app/pages/createproject/createproject.component.scss
@@ -48,9 +48,17 @@
   
   #drawflow {
     flex-grow: 1;
-    height: 500px;
-    background-color: #f0f0f0;
+    height: calc(100vh - 100px - 34px);
+    //background-color: red;
+    //background-color: #ccc;
     border: 1px solid #ccc;
+
+    background-image: 
+    linear-gradient(to right, lightgray 1px, transparent 1px),
+    linear-gradient(to bottom, lightgray 1px, transparent 1px);
+    background-size: 20px 20px; /* Adjust size of the grid */
+    //height: 100vh; /* Full height for the div */
+    
   }
   
   input,
@@ -221,6 +229,16 @@
   }
   .btn:hover{
     background-color: $h5-Blue !important;
+  }
+
+  .col-drawflow{
+    position: relative;
+  }
+
+  .button-container{
+    position: absolute;
+    bottom: 0;
+    right: 20px;
   }
   
   
