--- a/src/app/pages/datasets/datasets.component.html
+++ b/src/app/pages/datasets/datasets.component.html
@@ -1,1 +1,11 @@
-<p>datasets works!</p>
+<div class="h-100 w-100 px-5">
+    <div class="row gx-0 m-0 justify-content-between ">
+        <div class="col">All Available Datasets</div>
+        <div class="col-auto ms-auto ">
+            <app-search (search)="onSearch($event)"></app-search>
+        </div>
+    </div>
+    <div class="row">
+        
+    </div>
+</div>
