--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -78,7 +78,7 @@
                                         <p class="descriptionText">{{ item.description }}</p>
                                         <div class="s-card-labels">
                                             <ul class="overflow-hidden">
-                                                <li class="text-nowrap" *ngFor="let label of item.labels">{{ label }}
+                                                <li class="text-nowrap" *ngFor="let label of item?.labels">{{ label }}
                                                 </li>
                                             </ul>
                                         </div>
