--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -195,7 +195,7 @@ li{
 }
 // sidebar
 .side-menu{
-    margin-top: 15px;
+    // margin-top: 15px;
     box-shadow: 2px 2px 10px #ebebeb;
     ul{
         display: flex;
