--- a/src/app/commonComponent/modal/modal.component.html
+++ b/src/app/commonComponent/modal/modal.component.html
@@ -3,7 +3,7 @@
     [ngStyle]="{ 'z-index' : zIndex }">
     <div class="p-3 modal-content-phantom" [ngStyle]="styles">
         <header class="defaultHeader"><span [ngStyle]="{color: headerColor}">{{header}}</span>
-            <i class="boschicon-bosch-ic-close closeIcon" (click)="close()"></i>
+            <i *ngIf="allowClose" class="boschicon-bosch-ic-close closeIcon" (click)="close()"></i>
         </header>
         <div class="view">
             <ng-content></ng-content>
