--- a/src/app/pages/createproject/createproject.component.html
+++ b/src/app/pages/createproject/createproject.component.html
@@ -23,33 +23,42 @@
             </div>
             <div class="col-md-10 col-drawflow">
                 <div id="drawflow" class="drawflow" (drop)="drop($event)" (dragover)="allowDrop($event)"></div>
-                <div class="row button-container">
+                <div class="row button-container-right">
                     <div class="col d-flex justify-content-end mt-3">
                         <div class="me-2">
-                            <app-button (klick)="backToProjectList()"> Cancel </app-button>
+                            <app-button (klick)="runPipeline()"> Run Pipeline </app-button>
                         </div>
                         
                         <div>
                             <app-button (klick)="export()"> Save </app-button>
                         </div>
                     </div>
-                   
+                </div>
+                <div class="row button-container-left">
+                    <div class="col d-flex justify-content-end mt-3">
+                        <div class="me-2">
+                            <app-button (klick)="backToProjectList()" [class]="'secondary bg-white'"> Cancel </app-button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 <app-modal *ngIf="1==1" [(view)]="showModal" [header]="'Set Module Properties'"
-  [styles]="{ 'width': '70%', height : '500px'}" >
+  [styles]="{ 'width': '70%', height : '500px', position: 'relative'}" [allowClose]="false">
 
-    <div class="row">
+    <div class="row nodeProperties">
         <div *ngFor="let field of objectKeys(selectedItemAdditionalProperties)" class="col-md-6 mt-3">
           <ng-container [ngSwitch]="selectedItemAdditionalProperties[field].type">
     
             <!-- Input Box for String/Int -->
             <div *ngSwitchCase="'string'" >
                 <app-input
-                    [label]="selectedItemAdditionalProperties[field].placeHolder"></app-input>
+                    [label]="selectedItemAdditionalProperties[field].placeHolder"
+                    [value]="activeNodeDataDetails[selectedItemAdditionalProperties[field].keyToUseToStoreValue]"
+                    (valueChange)="storeAdditionalProperty($event,selectedItemAdditionalProperties[field].keyToUseToStoreValue)"
+                    ></app-input>
             </div>
     
             <!-- Dropdown Box -->
@@ -58,12 +67,15 @@
                     [dropdownList] = "selectedItemAdditionalProperties[field].optionList"
                     [selectedItems] = 'selectedItems'
                     [multiSelect] = "selectedItemAdditionalProperties[field].multiple"
-                    (valueChanged) = "itemSelcted($event)"
+                    (valueChanged) = "storeAdditionalProperty($event,selectedItemAdditionalProperties[field].keyToUseToStoreValue)"
                     [placeHolder] = "selectedItemAdditionalProperties[field].placeHolder"
                 ></app-select-dropdown>
             </div>
     
           </ng-container>
+        </div>
+        <div class="d-flex justify-content-end align-items-center mt-3 position-absolute">
+            <app-button (klick)="setPropertyValueToNode()" [class]="'primary'"> Save Properties </app-button>
         </div>
     </div>
 </app-modal>
