--- a/src/app/pages/createproject/createproject.component.scss
+++ b/src/app/pages/createproject/createproject.component.scss
@@ -48,7 +48,7 @@
   
   #drawflow {
     flex-grow: 1;
-    height: calc(100vh - 100px - 34px);
+    height: calc(100vh - 100px - 20px);
     //background-color: red;
     //background-color: #ccc;
     border: 1px solid #ccc;
@@ -107,7 +107,7 @@
   .drawflow-node.drawflow-node-rect {
     width: 140px;
     height: 140px;
-    background-color: transparent !important;
+    background-color: #f5f5f5;//transparent !important;
     box-shadow: 0px 0px 12px gray;
     border: 2px solid #000 !important;
   }
@@ -148,7 +148,7 @@
     transform: rotateX(45deg) rotateZ(45deg);
     border: 2px solid #000 !important;
     box-shadow: 0px 0px 12px gray;
-    background-color: transparent !important;;
+    background-color: #f5f5f5//transparent !important;;
   }
   // .diamond::after {
   //    position: absolute !important;
@@ -164,7 +164,7 @@
   .hexagon {
     width: 140px !important;
     height: 75px !important;
-    background: transparent !important;
+    background: #f5f5f5 !important;//transparent !important;
     box-shadow: 0px 0px 12px gray;
     border: 2px solid #000 !important;
     position: relative;
@@ -235,10 +235,22 @@
     position: relative;
   }
 
-  .button-container{
+  .button-container-right{
     position: absolute;
-    bottom: 0;
+    bottom: 10px;
     right: 20px;
   }
+
+  .button-container-left{
+    position: absolute;
+    bottom: 10px;
+    left: 20px;
+  }
+
   
   
+  .nodeProperties{
+    .position-absolute{
+      bottom: 10px;
+    }
+  }
