--- a/src/styles.scss
+++ b/src/styles.scss
@@ -471,3 +471,10 @@ dl {
 .overflow-auto {
   overflow: auto;
 }
+
+.tag-class{
+  background-color: #DFDFE0;
+  padding: 8px !important;
+  border-radius: 20px;
+  margin-right: 5px;
+}
