Updated More Icon

--- a/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
+++ b/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
@@ -327,7 +327,7 @@
                             <i class="boschicon-bosch-ic-download ms-3" title="Download"></i>
                             <i class="boschicon-bosch-ic-delete ms-3" title="Delete" tabindex="1"
                                 (click)="deleteNode(node.node_id)"></i>
-                            <i class="boschicon-bosch-ic-options ms-3" title="More options" tabindex="1"
+                            <i class="boschicon-bosch-ic-options-vertical ms-3" title="More options" tabindex="1"
                                 (blur)="closePopup(node.node_id)" (click)="openPopup(node.node_id)"></i>
                             <ul *ngIf="setItem==node.node_id" class="settingDropdownCSS">
                                 <div>
@@ -502,8 +502,9 @@
                                             <i class="boschicon-bosch-ic-download ms-1" title="Download"></i>
                                             <i class="boschicon-bosch-ic-delete ms-1" title="Delete" tabindex="1"
                                                 (click)="deleteNode(item.id)"></i>
-                                            <i class="boschicon-bosch-ic-options ms-1" title="More options" tabindex="1"
-                                                (blur)="closePopup(item.id)" (click)="openPopup(item.id)"></i>
+                                            <i class="boschicon-bosch-ic-options-vertical ms-1" title="More options"
+                                                tabindex="1" (blur)="closePopup(item.id)"
+                                                (click)="openPopup(item.id)"></i>
                                             <ul *ngIf="setItem==item.id" class="settingDropdownCSS">
                                                 <div>
                                                     <div class=" white-bg"></div>
