--- a/src/app/commonComponent/file-upload/file-upload.component.html
+++ b/src/app/commonComponent/file-upload/file-upload.component.html
@@ -3,8 +3,8 @@
     <div class="d-flex flex-column" (click)="triggerFileUpload()">
       <i class="boschicon-bosch-ic-upload fz-24px fw-bold"></i>
       <span class="fw-bold fz-16px">Drag and drop files/folder here</span>
-      <span class="fw-bold fz-16px">or <a  class="c-black">browse</a> to upload.</span>
-      <span *ngIf="fileName" class="text-primary mt-2">{{ fileName }}</span>
+      <span class="fw-bold fz-16px">or <a  class="c-black cursor-pointer">browse</a> to upload.</span>
+      <span *ngIf="fileName" class="text-primary mt-2">{{ fileName['name'] }}</span>
     </div>
   </div>
   
