--- a/src/app/commonComponent/input/input.component.html
+++ b/src/app/commonComponent/input/input.component.html
@@ -1,5 +1,7 @@
 <div class="input-container">
-    <span  class="fz-12px opacity-50per">{{label}}</span>
+    <span  class="fz-12px opacity-50per">{{label}}
+        <span *ngIf="required" class="required-asterisk">*</span>
+    </span>
     <input [placeholder]="placeHolder" [type]="type" [disabled]="disabled" [(ngModel)]="value"
     (ngModelChange)="updateInputValue()" />
 </div>
