--- a/src/app/pages/datasets/datasets.component.html
+++ b/src/app/pages/datasets/datasets.component.html
@@ -16,8 +16,8 @@
     </div>
     <div class=" d-flex justify-content-end">
         <div class="div">
-            <app-button [class]="'primary justify-content-center mt-2'" [width]="'200px'">
-                Add new Datasets </app-button>
+            <app-button [class]="'primary justify-content-center mt-2'" [width]="'200px'" (klick)="funcOpenAddNewDatasetsModal()">
+                 Add new Datasets </app-button>
         </div>
             <div class="ps-3">
                 <app-button [class]="'primary justify-content-center mt-2'" [width]="'200px'">
@@ -26,3 +26,41 @@
        
     </div>
 </div>
+
+<app-modal [zIndex]="'9998'" *ngIf="openAddNewDatasetsModal" [(view)]="openAddNewDatasetsModal" [header]="'Add New Datasets'"
+    [styles]="{ width: '60vw' }">
+    <div class="modal-body">
+        <form>
+            <div class="row gx-0 mt-3">
+                <div class="col mb-3">
+                    <app-input [label]="'Enter Name'" [required]="true" [(value)]="addNewDatasets.name"></app-input>
+                </div>
+            </div>
+            <div class="mb-3">
+                <app-textarea [label]="'Description'" [required]="true" [placeHolder]="'Enter Description'"
+                    [(value)]="addNewDatasets.description"></app-textarea>
+            </div>
+            <div class="mb-3">
+                <app-tag [label]="'Tags'" [placeHolder]="'Enter tags'"
+         [(value)]="addNewDatasets.tags" [required]="true"></app-tag>
+
+            </div>
+            <hr>
+            <div class="mb-3">
+                <label for="uploadFile" class="form-label fw-bold">Upload DataSet here <span class="required-asterisk">*</span></label>
+                <!-- <a href="#" class="float-end">Download .py Template File</a> -->
+                <app-file-upload [(fileName)]="addNewDatasets.file_name"></app-file-upload>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer d-flex justify-content-between">
+        <app-button [class]="'secondary justify-content-center'" [width]="'200px'" [fontSize]="'16px'"
+            (klick)="FuncCloseAddNewDatasetsModal()">
+            Cancel </app-button>
+        <!-- <app-button [class]="'primary justify-content-center'" [fontSize]="'16px'">
+            Open Template in Jupyter Editor</app-button> -->
+            <app-button [class]="'primary justify-content-center'" [width]="'200px'" [fontSize]="'16px'"
+            (klick)="SaveModal()">
+            Save </app-button>
+    </div>
+</app-modal>
