--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -97,8 +97,8 @@
     [styles]="{ width: '60vw' }">
     <div class="modal-body">
         <form>
-            <div class="row gx-0 m-0">
-                <div class="col mb-3 pe-3">
+            <div class="row gx-0 m-0 mt-3">
+                <div class="col mb-3 ">
                     <app-input [label]="'Enter Name'" [(value)]="createCustom.name"></app-input>
 
                 </div>
