--- a/src/styles.scss
+++ b/src/styles.scss
@@ -472,9 +472,14 @@ dl {
   overflow: auto;
 }
 
-.tag-class{
+.tag-class {
   background-color: #DFDFE0;
   padding: 8px !important;
   border-radius: 20px;
   margin-right: 5px;
+}
+
+.image-10-10 {
+  height: 10px;
+  width: 10px;
 }
