--- a/src/app/pages/createproject/createproject.component.scss
+++ b/src/app/pages/createproject/createproject.component.scss
@@ -107,7 +107,7 @@
   .drawflow-node.drawflow-node-rect {
     width: 140px;
     height: 140px;
-    background-color: #f5f5f5;//transparent !important;
+    background-color: #f5f5f5 !important;//transparent !important;
     box-shadow: 0px 0px 12px gray;
     border: 2px solid #000 !important;
   }
@@ -254,3 +254,46 @@
       bottom: 10px;
     }
   }
+
+/** Right Panel **/
+.right-panel {
+  position: fixed;
+  right: -300px; 
+  top: 0;
+  margin-top: 10px;
+  width: 300px;
+  height: 94%;
+  background-color: #f8f9fa;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  transition: right 0.4s ease; /* Smooth transition */
+  z-index: 1051; 
+}
+
+/* Panel visible state */
+.right-panel.show {
+  right: 0; /* Slide in from the right */
+}
+
+.right-panel-content {
+  padding: 20px;
+}
+
+/* Overlay */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  z-index: 1050; /* Below the right panel */
+  display: none; /* Hidden by default */
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+/* Show the overlay when panel is open */
+.overlay.show {
+  display: block;
+  opacity: 1; /* Fade in the overlay */
+}
